# starwars

./: README.md  app.py  page.html  pyproject.toml
cli/: give-me-the-odds.py
scripts/: run_black.sh  run_flake8.sh  run_isort.sh  run_mypy.sh
src/: boat.py  empire.py  odds_counter.py  path.py
tests/: test_odd_counter.py
web/css/: styles.css
web/js/: script.js
